@@ -16,6 +16,9 @@
 	* manifest diff now checks if manifest files really exist
 	* xhost + was added right before entering chroot environment
 	* lxterminal support was added (#865295)
+	* mksquashfs now uses XZ (lzma) compression if available
+	  (squashfs-tool => 4.1 and guest kernel => 2.6.30)
+	  (#654234)
 * Package:
 	* suggestion for syslinux (isohybrid) installation was added
 
